after fixing spacing issues

--- a/src/App.scss
+++ b/src/App.scss
@@ -59,6 +59,7 @@ img {
         }
         img {
             max-width: 96px;
+            margin-top: 7px;
             @media screen and (max-width: 1023px) {  
                 max-width: 60px;
                 margin-top: 5px;
@@ -68,7 +69,6 @@ img {
     .ant-cols {
         display: flex;
         flex-wrap: wrap;
-        justify-content: space-between;
         @media screen and (max-width: 1023px) { 
             display: block;
         }
@@ -98,16 +98,25 @@ img {
         }
         .footer-text {
             max-width: 352px;
-            
+            margin-left: 40px;
+            margin-right: 7%;
             @media screen and (max-width: 1023px) { 
                 max-width: 455px;
                 padding-left: 15px;
                 float: left;
+                margin: 0;
                 p {
                     text-align: left;
                 }
             }
             @media screen and (max-width: 560px) { 
+                max-width: 300px;
+                p {
+                    font-size: 14px;
+                }
+                
+            }
+            @media screen and (max-width: 399px) { 
                 max-width: 250px;
                 p {
                     font-size: 12px;
@@ -117,13 +126,14 @@ img {
             
         }
         .footer-link {
+            margin-right: 15%;
             @media screen and (max-width: 1023px) { 
                 padding: 30px 0 15px;
                 text-align: left;
                 min-width: 100%;
                 float: left;
                 max-width: 440px;
-                
+                margin-right: 0;
             }
             p {
                 font-weight: 500;
@@ -292,7 +302,7 @@ img {
         width: 100%;
         height: 442px;
         position: absolute;
-        top: 395px;
+        top: 355px;
         left: 0;
         content: '';
         background-image: url('../src/assets/img/introbg.png');
@@ -328,7 +338,7 @@ img {
     .about-intro {
         padding-bottom: 95px;
         @media screen and (max-width: 1023px) {
-            padding-bottom: 40px;
+            padding-bottom: 65px;
         }
         h2 {
             font-size: 48px;
@@ -750,4 +760,7 @@ img {
             }
         }   
     }
+}
+.swiper-button-prev:after, .swiper-button-next:after {
+    color: #C3F500;
 }
